@@ -59,9 +59,10 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-27 15:23:30 L.218'30990 T3621318130.K ~278 +----+----+----+----+----+
+     Zndex_E : //z 2015-05-28 17:55:41 L.217'21859 T1980717820.K ~290 +----+----+----+----+----+
      TimeCnt : //z 2015-05-22 17:23:06 L.223'23814 T1570279794.K ~10  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~16  +----+----+----+----+----+
+     #16  R+ : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~16    V+.295  L+.337  
      #15  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15    V+.273  L+.295  
      #14  R+ : //z 2015-05-21 17:49:30 L.224'22230 T1505065974.K ~14    V+.196  L+.236  
      #13  R+ : //z 2015-05-19 16:07:36 L.226'28344 T2808715324.K ~13    V+.179  L+.227  
@@ -78,7 +79,9 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-27 15:23:30 L.218'30990 T3621318130.K ~293   R+.15   L+.322  --+----+
+     Version : //z 2015-05-28 17:55:41 L.217'21859 T1980717820.K ~306   R+.16   L+.343  --+----+
+     #16  V+ : //z 2015-05-28 17:46:03 L.217'22437 T1979567706.K ~304   R+.16   L+.342  
+     #15  R+ : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~295   R+.16   L+.338  V+.295  
      #15  V+ : //z 2015-05-26 16:59:26 L.219'25234 T553790784 .K ~285   R+.14   L+.293  
      #14  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~273   R+.15   L+.296  V+.273  
      #14  V+ : //z 2015-05-21 18:07:22 L.224'21158 T2791718354.K ~266   R+.14   L+.280  
@@ -330,3 +333,12 @@ add_library,add_executable
 加入一句
 set_target_properties(${prj_target} PROPERTIES FOLDER "test") 
 #endregion //z 2015-05-22 17:22:59 L.223'23821 BG57IV3@XCL T1570244025.K.F4146951713-+----+----+
+
+#region 05-28 17:45 R#.16   @3ds
+01. 
+lib3ds
+3ds dump
+3ds play
+http://www.gametutorials.com/ s 3ds
+潘李亮 evlution 3d
+#endregion //z 2015-05-28 17:45:17 L.217'22483 BG57IV3@XCL T1979531806.K.F4146951713-+----+----+
